# WuKong

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.py  run_experiment.py
Libs/: CMakeLists.txt
Libs/Ziran/: CMakeLists.txt
Libs/lbfgsb-Jonas/: BoxConstraints.cpp  BoxConstraints.h  LBFGSB.cpp  LBFGSB.h
Libs/lbfgsb-Jonas/lbfgsb/: LBFGSB-fable.cpp  LBFGSB-fable.h
Libs/spectra/: CHANGELOG.md
Projects/CellSim/: CMakeLists.txt
Projects/CellSim/data/: weights_1500.txt  weights_463.txt
Projects/CellSim/include/: DataIO.h  GeometryHelper.h  IpoptForwardSolver.h  IpoptSolver.h  KinitroSolver.h  LinearSolver.h  Misc.h  Objectives.h  SDF.h  SensitivityAnalysis.h  Simulation.h  SoftPenalty.h  Util.h  VecMatDef.h  VertexModel.h  app.h  eiquadprog.h  redsvd.h
Projects/CellSim/scripts/: check_convergence.py  check_opt_log.py  poisson.mlx  visualize_data_2014.py  visualize_mat_data.py
Projects/CellSim/src/: AreaTerms.cpp  CellVolume.cpp  DataIO.cpp  DerivativeTest.cpp  Dynamics.cpp  EdgeTerms.cpp  ElasticityTerms.cpp  GeometryHelper.cpp  Helpers.cpp  IPC.cpp  IpoptSolver.cpp  LinearSolver.cpp  MembraneTerms.cpp  Misc.cpp  ObjNucleiMatching.cpp  Objectives.cpp  Perivitelline.cpp  SDF.cpp  Scene.cpp  SensitivityAnalysis.cpp  SensitivityDerivatives.cpp  Simulation.cpp  SoftPenalty.cpp  SpatialHash.cpp  VertexModel.cpp  Visualization.cpp  VolumeBarrier.cpp  Yolk.cpp  app.cpp  main.cpp
Projects/CellSim2D/: CMakeLists.txt
Projects/CellSim2D/include/: IMLS.h  IpoptSolver.h  Objective.h  SensitivityAnalysis.h  SpatialHash.h  VertexModel2D.h
Projects/CellSim2D/scripts/: check_log.py  denoise.m
Projects/CellSim2D/src/: DerivativeTest.cpp  IMLS.cpp  IPC.cpp  LinearSolver.cpp  Objective.cpp  SensitivityAnalysis.cpp  SpatialHash.cpp  VertexModel2D.cpp  main.cpp
Projects/CellSimExplicit/: CMakeLists.txt
Projects/CellSimExplicit/include/: App.h  CellSim.h
Projects/CellSimExplicit/src/: App.cpp  AreaTerms.cpp  CellSim.cpp  CellVolume.cpp  DerivativeTest.cpp  EdgeTerms.cpp  IPC.cpp  Yolk.cpp  main.cpp
Projects/CellSimParticles/: CMakeLists.txt
Projects/CellSimParticles/autodiff/: AreaEnergy.cpp  AreaEnergy.h  EdgeEnergy.cpp  EdgeEnergy.h  Repulsion.cpp  Repulsion.h  VolumeEnergy.cpp  VolumeEnergy.h
Projects/CellSimParticles/include/: App.h  CellSim.h  SDF.h  Timer.h
Projects/CellSimParticles/src/: Adhesion.cpp  App.cpp  CellSim.cpp  Collision.cpp  DerivativeTest.cpp  IPC.cpp  Membrane.cpp  PositionMatching.cpp  Processing.cpp  Repulsion.cpp  SDF.cpp  Scene.cpp  Yolk.cpp  main.cpp
Projects/DigitalFabrics3D/: Bending.cpp  BendingAndTwisting.cpp  CMakeLists.txt  DerivativeTest.cpp  Elasticity.cpp  EoLRodBendingAndTwisting.h  EoLRodEulerAngleBendingAndTwisting.h  EoLRodQuaternionBendingAndTwisting.h  EoLRodSim.cpp  EoLRodSim.h  EoLRodStretchingEnergy.h  EulerianConstraints.cpp  GCodeGenerator.cpp  GCodeGenerator.h  Homogenization.cpp  Homogenization.h  HybridC2Curve.cpp  Inverse.cpp  Joint.cpp  JointBendingAndTwisting.h  PBCBendingAndTwisting.cpp  ParallelContact.cpp  PeriodicBC.cpp  Regularizer.cpp  RestState.cpp  RestState.h  Rod.cpp  Rod.h  Scene.cpp  Shearing.cpp  Stretching.cpp  Twisting.cpp  UI.cpp  UI.h  UnitPatch.cpp  UnitPatch.h  Util.h  Visualization.cpp  main.cpp  viewer.hipnc
Projects/DigitalFabrics3D/Data/: test.curve
Projects/DigitalFabrics3D/GCode/: dense_patch_tunnel_worked.gcode  sliding_blocks.gcode  sliding_blocks_1X1Y.gcode  sliding_blocks_1X1Y_bar.gcode  sliding_blocks_1X1Y_fuse_corner.gcode  sliding_blocks_1X1Y_fuse_corner_bar.gcode  sliding_blocks_fused.gcode
Projects/DigitalFabrics3D/Maple/: DiscreateCurvatureF.mcg  DiscreateCurvatureJ.mcg  DiscreateCurvatureV.mcg  DiscreteCurvature.mw  LSF.mcg  LSFFull.mcg  LSJFull.mcg  LSVFull.mcg  LeastSquare.mw  LeastSquareEntry.mw  Rod3DBending.mw  Rod3DStretching.mw  Rod3DTwisting.mw  Rod3DTwistingMath.mw  Rod3DTwistingMath_MAS.bak  RodBending3DF.mcg  RodBending3DJ.mcg  RodBending3DV.mcg  RodStretching3DF.mcg  RodStretching3DJ.mcg  RodStretching3DV.mcg  RodTwisting3DF.mcg  RodTwisting3DJ.mcg  RodTwisting3DV.mcg  RotationPenalty.mw  RotationPenaltyJ.mcg  RotationPenaltyV.mcg  ToCpp.py  UniAxialStrainF.mcg  UniAxialStrainJ.mcg  YarnBendDiscreteRestCurvatureF.mcg  YarnBendDiscreteRestCurvatureV.mcg  YarnBendF.mcg  YarnBendJ.mcg  YarnBendPBCJ.mcg  YarnBendPBCRestCurvatureF.mcg  YarnBendPBCRestCurvatureV.mcg  YarnBendPBCSDF.mcg  YarnBendPBCSDV.mcg  YarnBendRestCurvatureV.mcg  (+11 more)
Projects/DigitalFabrics3D/autodiff/: EoLRodBendingAndTwisting.h  EoLRodBendingAndTwistingPBC.h  EoLRodEulerAngleBendingAndTwisting.h  EoLRodQuaternionBendingAndTwisting.h  EoLRodStretchingEnergy.h  JointBendingAndTwisting.h  RotationPenalty.h
Projects/DigitalFabrics3D/backup/: viewer_bak1.hipnc  viewer_bak2.hipnc  viewer_bak3.hipnc  viewer_bak4.hipnc  viewer_bak5.hipnc  viewer_bak6.hipnc  viewer_bak8.hipnc  viewer_bak9.hipnc
Projects/FEM/: CMakeLists.txt
Projects/FEM/data/: cube.stl  simulationTest.STL
Projects/FEM/include/: 2DNeoHookeanQuad.h  App.h  Contact2D.h  Contact3D.h  FEMSolver.h  IMLSdiff.h  L2diff.h  MortarMethod.h  MortarMethodDiff.h  RIMLSdiff.h  SpatialHash.h  VecMatDef.h  vtk_io.h
Projects/FEM/src/: 2DNeoHookeanQuad.cpp  App.cpp  BoundaryCondiction.cpp  (+34 more)
Projects/Foam2D/: CMakeLists.txt  todo.md
Projects/NeuralConstitutiveModel/: CMakeLists.txt
Projects/NeuralElement/: CMakeLists.txt
Projects/Tiling2D/: CMakeLists.txt
Projects/Tiling3D/: CMakeLists.txt  Tiling3D.cpp  Tiling3D.h  gen_data_server_toy.py  main.cpp  plotCurve.m
Projects/TopographyOptimization/: BoundaryCondition.cpp  BoundaryCondition.h  CMakeLists.txt  DerivativeTest.cpp  Dijkstra.h  FEMSolver.cpp  FEMSolver.h  HexFEMSolver.h  README.MD  ShapeInitializer.cpp  ShellFEMSolver.cpp  ShellFEMSolver.h  Spline.h  StaticGrid.h  TopoOptSimulation.h  TopoSpacialHash.h  TopographyOptimization.cpp  TopographyOptimization.h  getRSS.hpp  main.cpp
Projects/VoronoiCells/: CMakeLists.txt
Solver/: CHOLMODSolver.cpp  CHOLMODSolver.hpp  CMakeLists.txt  GCMMASolver.cpp  GCMMASolver.h  LinearSolver.cpp  LinearSolver.h  MMASolver.cpp  MMASolver.h  README.md
(+770 files in other folders)
